* Adds visible log for sample page * Adds basic "global" logging (for adding listeners to the log function) * Adds basic styles to jscom.metro.css * Adds responsiveness to $.js.dialog * Adds table css * Adds some form css * Cleans up button issues * Adds [data-contain] for grouping controls * $.js.dialog now accepts a jQuery item as it's "msg" * $.js.dialog now passes back more info (dlg, target element, event) * Adds $.fn.resetForm for resetting a form * Adds $.fn.bindFormToHtml for binding a form's elements to a set of elements using [data-prop] attributes * Changes parseDuration to use parseFloat instead of parseInt

--- a/source/content/css/base.css
+++ b/source/content/css/base.css
@@ -111,3 +111,13 @@ footer[data-role="content"] {
     width: 20%;
     min-width: 125px;
 }
+
+#LogOutput {
+    height: 300px;
+    overflow: auto;
+    background: #fff;
+    padding: 10px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    border: solid 2px #ccc;
+}
